--- a/en_US.lang
+++ b/en_US.lang
@@ -1,63 +1,63 @@
-itemGroup.props.Main=PropsMod
-itemGroup.props.Toys=Props [Toys]
-itemGroup.props.Lighting=Props [Lighting]
-itemGroup.props.Storage=Props [Storage]
-itemGroup.props.Food=Props [Food]
-itemGroup.props.Holiday=Props [Holiday]
-itemGroup.props.Signs=Props [Signs]
-itemGroup.props.Tech=Props [Technology]
-itemGroup.props.Patreon=Props [Patreon]
-itemGroup.props.Bathroom=Props [Bathroom]
-itemGroup.props.Dining=Props [Dining]
-itemGroup.props.Livingroom=Props [Living Room]
-itemGroup.props.Yard=Props [Yard]
-itemGroup.props.Sports=Props [Sports]
-itemGroup.props.Dungeon=Props [Dungeon]
-itemGroup.props.Kitchen=Props [Kitchen]
-itemGroup.props.Fences=Props [Fences]
-itemGroup.props.Bedroom=Props [Bedroom]
-itemGroup.props.Science=Props [Science]
-itemGroup.props.Office=Props [Office]
-itemGroup.props.Religion=Props [Religion]
-itemGroup.props.Art=Props [Art]
-itemGroup.props.Trophies=Props [Trophies]
+itemGroup.props.Main=Decocraft
+itemGroup.props.Toys=Decoraties [Speelgoed]
+itemGroup.props.Lighting=Decoraties [Verlichting]
+itemGroup.props.Storage=Decoraties [Opbergruimte]
+itemGroup.props.Food=Decoraties [Voedsel]
+itemGroup.props.Holiday=Decoraties [Feestdagen]
+itemGroup.props.Signs=Decoraties [Uithangborden]
+itemGroup.props.Tech=Decoraties [Technologie]
+itemGroup.props.Patreon=Decoraties [Patreon]
+itemGroup.props.Bathroom=Decoraties [Badkamer]
+itemGroup.props.Dining=Decoraties [Dineren]
+itemGroup.props.Livingroom=Decoraties [Woonkamer]
+itemGroup.props.Yard=Decoraties [Tuin]
+itemGroup.props.Sports=Decoraties [Sport]
+itemGroup.props.Dungeon=Decoraties [Kerker]
+itemGroup.props.Kitchen=Decoraties [Keuken]
+itemGroup.props.Fences=Decoraties [Hekwerk]
+itemGroup.props.Bedroom=Decoraties [Slaapkamer]
+itemGroup.props.Science=Decoraties [Wetenschap]
+itemGroup.props.Office=Decoraties [Kantoor]
+itemGroup.props.Religion=Decoraties [Religie]
+itemGroup.props.Art=Decoraties [Hobbies]
+itemGroup.props.Trophies=Decoraties [Trofeeën]
 
-text.props.gui.title=Decobench
-text.props.gui.info= - Shift for Info - 
-text.props.gui.search=Search Here!
-text.props.gui.slot.input=Drop Resources Here!
-text.props.gui.slot.output=Pickup Finished Model Here!
-text.props.gui.resources.add=Add to Table
-text.props.gui.resources.add_loss=!! Will Waste Resources !!
-text.props.gui.resources.add_loss_warning=-= Hold Shift to Force Add Resources =-
-text.props.gui.resources.clay=Clay
-text.props.gui.resources.red=Red
-text.props.gui.resources.green=Green
-text.props.gui.resources.blue=Blue
-text.props.gui.resources.insufficient=Not enough resources to craft!
-text.props.gui.filter.tab=Tab Filter
-text.props.gui.tab.Toys=Toys
-text.props.gui.tab.Lighting=Lighting
-text.props.gui.tab.Storage=Storage
-text.props.gui.tab.Food=Food
-text.props.gui.tab.Holiday=Holiday
-text.props.gui.tab.Signs=Signs
-text.props.gui.tab.Tech=Technology
+text.props.gui.title=Decoreertafel
+text.props.gui.info= - Druk op shift voor meer informatie - 
+text.props.gui.search=Zoeken
+text.props.gui.slot.input=Plaats grondstoffen hier!
+text.props.gui.slot.output=Pak je decoratie!
+text.props.gui.resources.add=Toevoegen aan tafel
+text.props.gui.resources.add_loss=!! Dit zal grondstoffen verspillen !!
+text.props.gui.resources.add_loss_warning=-= Houd shift ingedrukt om het toevoegen te forceren =-
+text.props.gui.resources.clay=Klei
+text.props.gui.resources.red=Rood
+text.props.gui.resources.green=Groen
+text.props.gui.resources.blue=Blauw
+text.props.gui.resources.insufficient=Niet genoeg grondstoffen!
+text.props.gui.filter.tab=Catagorie
+text.props.gui.tab.Toys=Speelgoed
+text.props.gui.tab.Lighting=Verlichting
+text.props.gui.tab.Storage=Opbergruimte
+text.props.gui.tab.Food=Voedsel
+text.props.gui.tab.Holiday=Feestdagen
+text.props.gui.tab.Signs=Uithangborden
+text.props.gui.tab.Tech=Technologie
 text.props.gui.tab.Patreon=Patreon
-text.props.gui.tab.Bathroom=Bathroom
-text.props.gui.tab.Dining=Dining
-text.props.gui.tab.Livingroom=Living Room
-text.props.gui.tab.Yard=Yard
-text.props.gui.tab.Sports=Sports
-text.props.gui.tab.Dungeon=Dungeon
-text.props.gui.tab.Kitchen=Kitchen
-text.props.gui.tab.Fences=Fences
-text.props.gui.tab.Bedroom=Bedroom
-text.props.gui.tab.Science=Science
-text.props.gui.tab.Office=Office
-text.props.gui.tab.Religion=Religion
-text.props.gui.tab.Art=Art
-text.props.gui.tab.Trophies=Trophies
+text.props.gui.tab.Bathroom=Badkamer
+text.props.gui.tab.Dining=Dineren
+text.props.gui.tab.Livingroom=Woonkamer
+text.props.gui.tab.Yard=Tuin
+text.props.gui.tab.Sports=Sport
+text.props.gui.tab.Dungeon=Kerker
+text.props.gui.tab.Kitchen=Keuken
+text.props.gui.tab.Fences=Hekwerk
+text.props.gui.tab.Bedroom=Slaapkamer
+text.props.gui.tab.Science=Wetenschap
+text.props.gui.tab.Office=Kantoor
+text.props.gui.tab.Religion=Religie
+text.props.gui.tab.Art=Hobby
+text.props.gui.tab.Trophies=Trofeeën
 
 text.props.tooltip.resources_provided.0=Clay Provided:
 text.props.tooltip.resources_provided.1=Red Provided:
