--- a/en_US.lang
+++ b/en_US.lang
@@ -59,81 +59,81 @@ text.props.gui.tab.Religion=Religie
 text.props.gui.tab.Art=Hobby
 text.props.gui.tab.Trophies=Trofeeën
 
-text.props.tooltip.resources_provided.0=Clay Provided:
-text.props.tooltip.resources_provided.1=Red Provided:
-text.props.tooltip.resources_provided.2=Green Provided:
-text.props.tooltip.resources_provided.3=Blue Provided:
-text.props.tooltip.resource_cost.0=Clay Cost:
-text.props.tooltip.resource_cost.1=Red Cost:
-text.props.tooltip.resource_cost.2=Green Cost:
-text.props.tooltip.resource_cost.3=Blue Cost:
-text.props.tooltip.saved_item=Contains saved info!
+text.props.tooltip.resources_provided.0=Klei:
+text.props.tooltip.resources_provided.1=Rode kleurstof:
+text.props.tooltip.resources_provided.2=Groene kleurstof:
+text.props.tooltip.resources_provided.3=Blauwe kleurstof:
+text.props.tooltip.resource_cost.0=Klei benodigd:
+text.props.tooltip.resource_cost.1=Rode kleurstof benodigd:
+text.props.tooltip.resource_cost.2=Groene kleurstof benodigd:
+text.props.tooltip.resource_cost.3=Blauwe kleurstof benodigd:
+text.props.tooltip.saved_item=Bevat opgeslagen informatie!
 
-items.craftingclay.red.name=Red Crafting Clay
-items.craftingclay.blue.name=Blue Crafting Clay
-items.craftingclay.green.name=Green Crafting Clay
+items.craftingclay.red.name=Rode Boetseerklei
+items.craftingclay.blue.name=Blauwe Boetseerklei
+items.craftingclay.green.name=Groene Boetseerklei
 
-item.props.stuffed_creeper.name=Stuffed Creeper
-item.props.wine_bottle.name=Wine Bottle
-item.props.grandfather_clock.name=Grandfather Clock
-item.props.wood_blocks.name=Wood Blocks
-item.props.spinning_wheel.name=Spinning Wheel
-item.props.jack_in_the_box.name=Jack In The Box
-item.props.paper_airplane.name=Paper Airplane
-item.props.gold_ingot_stack.name=Gold Ingot Stack
-item.props.rocking_horse.name=Rocking Horse
-item.props.toy_soldier.name=Toy Soldier
+item.props.stuffed_creeper.name=Opgezette Creeper
+item.props.wine_bottle.name=Wijnfles
+item.props.grandfather_clock.name=Grootvadersklok
+item.props.wood_blocks.name=Houten blokken
+item.props.spinning_wheel.name=Spinnewiel
+item.props.jack_in_the_box.name=Clown in een doosje
+item.props.paper_airplane.name=Papieren vliegtuigje
+item.props.gold_ingot_stack.name=Stapel goudstaven
+item.props.rocking_horse.name=Hobbelpaard
+item.props.toy_soldier.name=Speelgoedsoldaat
 item.props.r2_d2.name=R2 D2
-item.props.rubkik_s_cube.name=Rubkik's Cube
-item.props.toy_boat.name=Toy Boat
-item.props.plates_fancy.name=Plates Fancy
+item.props.rubkik_s_cube.name=Rubiks kubus
+item.props.toy_boat.name=Speelgoedboot
+item.props.plates_fancy.name=Bord en bestek
 item.props.piano.name=Piano
-item.props.stained_glass_orange.name=Stained Glass Orange
-item.props.stained_glass_magenta.name=Stained Glass Magenta
-item.props.stained_glass_lightblue.name=Stained Glass LightBlue
-item.props.stained_glass_yellow.name=Stained Glass Yellow
-item.props.stained_glass_lime.name=Stained Glass Lime
-item.props.stained_glass_pink.name=Stained Glass Pink
-item.props.stained_glass_cyan.name=Stained Glass Cyan
-item.props.stained_glass_purple.name=Stained Glass Purple
-item.props.stained_glass_blue.name=Stained Glass Blue
-item.props.stained_glass_green.name=Stained Glass Green
-item.props.stained_glass_red.name=Stained Glass Red
-item.props.stained_glass_white.name=Stained Glass White
-item.props.tea_set.name=Tea Set
-item.props.tea_cup.name=Tea Cup
-item.props.long_crate.name=Long Crate
-item.props.picnic_basket.name=Picnic Basket
-item.props.cuckoo_clock.name=Cuckoo Clock
-item.props.pumpkin_trio.name=Pumpkin Trio
-item.props.cradle.name=Cradle
-item.props.xylophone.name=Xylophone
-item.props.toy_train.name=Toy Train
-item.props.discordmlp.name=DiscordMLP
-item.props.scarecrow.name=Scarecrow
-item.props.wine_rack_full.name=Wine Rack Full
-item.props.wine_rack_empty.name=Wine Rack Empty
-item.props.papel_picado_orange.name=Papel Picado Orange
-item.props.papel_picado_black.name=Papel Picado Black
-item.props.papel_picado_blue.name=Papel Picado Blue
-item.props.papel_picado_cyan.name=Papel Picado Cyan
-item.props.papel_picado_green.name=Papel Picado Green
-item.props.papel_picado_light_blue.name=Papel Picado Light Blue
-item.props.papel_picado_lime.name=Papel Picado Lime
-item.props.papel_picado_magenta.name=Papel Picado Magenta
-item.props.papel_picado_pink.name=Papel Picado Pink
-item.props.papel_picado_purple.name=Papel Picado Purple
-item.props.papel_picado_red.name=Papel Picado Red
-item.props.papel_picado_white.name=Papel Picado White
-item.props.papel_picado_yellow.name=Papel Picado Yellow
-item.props.gold_oddem.name=Gold Oddem
-item.props.silver_oddem.name=Silver Oddem
-item.props.bronze_oddem.name=Bronze Oddem
-item.props.training_dummy.name=Training Dummy
-item.props.stuffed_bunny.name=Stuffed Bunny
-item.props.stuffed_teddy.name=Stuffed Teddy
-item.props.iron_ingot_stack.name=Iron Ingot Stack
-item.props.bronze_ingot_stack.name=Bronze Ingot Stack
+item.props.stained_glass_orange.name=Glas in lood (Oranje)
+item.props.stained_glass_magenta.name=Glas in lood (Magenta)
+item.props.stained_glass_lightblue.name=Glas in lood (Lichtblauw)
+item.props.stained_glass_yellow.name=Glas in lood (Geel)
+item.props.stained_glass_lime.name=Glas in lood (Lichtgroen)
+item.props.stained_glass_pink.name=Glas in lood (Roze)
+item.props.stained_glass_cyan.name=Glas in lood (Turqoise)
+item.props.stained_glass_purple.name=Glas in lood (Paars)
+item.props.stained_glass_blue.name=Glas in lood (Blauw)
+item.props.stained_glass_green.name=Glas in lood (Groen)
+item.props.stained_glass_red.name=Glas in lood (Rood)
+item.props.stained_glass_white.name=Glas in lood (Wit)
+item.props.tea_set.name=Theeset
+item.props.tea_cup.name=Theekopje
+item.props.long_crate.name=Lang houten krat
+item.props.picnic_basket.name=Picknickmand
+item.props.cuckoo_clock.name=Koekoeksklok
+item.props.pumpkin_trio.name=Drie pompoenen
+item.props.cradle.name=Kribbe
+item.props.xylophone.name=Xylofoon
+item.props.toy_train.name=Speelgoedtrein
+item.props.discordmlp.name=Twist (My Little Pony)
+item.props.scarecrow.name=Vogelverschrikker
+item.props.wine_rack_full.name=Wijnrek
+item.props.wine_rack_empty.name=Wijnrek (Leeg)
+item.props.papel_picado_orange.name=Geperforeerd papier (Oranje)
+item.props.papel_picado_black.name=Geperforeerd papier (Zwart)
+item.props.papel_picado_blue.name=Geperforeerd papier (Blauw)
+item.props.papel_picado_cyan.name=Geperforeerd papier (Turqoise)
+item.props.papel_picado_green.name=Geperforeerd papier (Groen)
+item.props.papel_picado_light_blue.name=Geperforeerd papier (Lichtblauw)
+item.props.papel_picado_lime.name=Geperforeerd papier (Lichtgroen)
+item.props.papel_picado_magenta.name=Geperforeerd papier (Magenta)
+item.props.papel_picado_pink.name=Geperforeerd papier (Roze)
+item.props.papel_picado_purple.name=Geperforeerd papier (Paars)
+item.props.papel_picado_red.name=Geperforeerd papier (Rood)
+item.props.papel_picado_white.name=Geperforeerd papier (Wit)
+item.props.papel_picado_yellow.name=Geperforeerd papier (Geel)
+item.props.gold_oddem.name=Gouden Troffee
+item.props.silver_oddem.name=Zilveren Troffee
+item.props.bronze_oddem.name=Bronze Troffee
+item.props.training_dummy.name=Traindummy
+item.props.stuffed_bunny.name=Opgezet konijn
+item.props.stuffed_teddy.name=Opgezette teddybeer
+item.props.iron_ingot_stack.name=Stapel Ijzerstaven
+item.props.bronze_ingot_stack.name=Stapel Bronsstafen
 item.props.tanning_rack_cow.name=Tanning Rack Cow
 item.props.tanning_rack_leather.name=Tanning Rack Leather
 item.props.tanning_rack_wolf.name=Tanning Rack Wolf
